[package]
name = "smb2-rs"
version = "0.1.0"
edition = "2021"
authors = ["Akatsuki"]
description = "A library for smb2.1 authentication."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Schira4396/smb2-rs"
repository = "https://github.com/Schira4396/smb2-rs"
documentation = "https://github.com/Schira4396/smb2-rs"




[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.4"
asn1-rs = "0.6.2"
ntlmclient = "0.1.0"
hex = "0.4.3"
base64 = "0.22.1"
bitflags = "2.6.0"
hmac = "0.12.1"
md5 = "0.7.0"
anyhow = "1.0.91"