[package]
name = "smb2-rs"
version = "0.2.1"
edition = "2021"
authors = ["Akatsuki"]
description = "A library for smb2.1 authentication."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Schira4396/smb2-rs"
repository = "https://github.com/Schira4396/smb2-rs"
documentation = "https://github.com/Schira4396/smb2-rs"




[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
asn1-rs = "0.6.2"
ntlmclient = "0.1.0"
hex = "0.4.3"
anyhow = "1.0.91"
rasn = "0.26.6"
binrw = "0.15.0"
thiserror = "1.0.69"