[package]
name = "smb2-rs"
version = "0.2.0"
edition = "2021"
authors = ["Akatsuki"]
description = "A library for smb2.1 authentication."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Schira4396/smb2-rs"
repository = "https://github.com/Schira4396/smb2-rs"
documentation = "https://github.com/Schira4396/smb2-rs"




[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
ntlmclient = { version = "0.1.0", path = "src/ntlmclient-0.1.0" }
anyhow = "1.0.91"
rasn = "*"
binrw = "*"
thiserror = "*"
bitflags = "2.9.1"
hex = "*"